--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,35 @@
-<h1>
-  {{title}}
-</h1>
+<div
+(click)="onClickSimple()"
+(mousedown)="clickInfo = 'mousedown'"
+[@clickedState]="clickInfo">
+</div>
+
+<p
+(click)="paragraphClick = 'clicked'"
+[@clickedState]="paragraphClick">some text</p>
+
+<hr>
+<input type="number" (input)="numberEntered = $event.target.value">
+
+<br>
+<br>
+<span [@numberEnteredState]="numberEntered == '1' ? 'selected' : 'unselected'">1</span>
+<span [@numberEnteredState]="numberEntered == '2' ? 'selected' : 'unselected'">2</span>
+<span [@numberEnteredState]="numberEntered == '3' ? 'selected' : 'unselected'">3</span>
+<span [@numberEnteredState]="numberEntered == '4' ? 'selected' : 'unselected'">4</span>
+<span [@numberEnteredState]="numberEntered == '5' ? 'selected' : 'unselected'">5</span>
+<span [@numberEnteredState]="numberEntered == '6' ? 'selected' : 'unselected'">6</span>
+<span [@numberEnteredState]="numberEntered == '7' ? 'selected' : 'unselected'">7</span>
+<span [@numberEnteredState]="numberEntered == '8' ? 'selected' : 'unselected'">8</span>
+<span [@numberEnteredState]="numberEntered == '9' ? 'selected' : 'unselected'">9</span>
+<span [@numberEnteredState]="numberEntered == '0' ? 'selected' : 'unselected'">0</span>
+
+<br>
+<br>
+<br>
+<!-- <app-counter></app-counter> -->
+<!-- <app-material></app-material> -->
+<!-- <app-angmaterial></app-angmaterial> -->
+<!-- <app-modalpractice></app-modalpractice> -->
+<!-- <app-inputform></app-inputform> -->
+<!-- <app-progressbarpractice></app-progressbarpractice> -->
